--- a/1/ActivityTest/app/src/main/AndroidManifest.xml
+++ b/1/ActivityTest/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".FirstActivity"
+            android:launchMode="standard"
             android:label="This is FirstActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,6 +20,7 @@
         </activity>
         <activity
             android:name=".SecondActivity"
+            android:launchMode="singleInstance"
             android:label="This is SecondActivity">
             <intent-filter>
                 <action android:name="activitytest.example.com.activitytest.ACTION_START" />
